Read PCAPdroid extensions metadata from Pcapng
A PCAP/Pcapng reader has been implemented to support parsing the
PCAPdroid extensions metadata. This allows displaying a number of
information in the UI when loading from a Pcapng file, in particular:

- when the dump was generated with root, show the capture interface
  name
- show the UID (app) related to a given connection
- if the dump contains UIDs of uninstalled apps, show the
  original package name and app name

Closes #479

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,7 @@
     <string name="dns_server">DNS server</string>
     <string name="apps">Apps</string>
     <string name="pcap_file">PCAP file</string>
-    <string name="pcap_file_info">Create a PCAP file in device storage</string>
+    <string name="pcap_file_info">Create a PCAP/Pcapng file in the device storage</string>
     <string name="cannot_write_file">Cannot write file</string>
     <string name="share">Share</string>
     <string name="delete">Delete</string>
@@ -317,7 +317,7 @@
     <string name="geolocation_summary">Show country and ASN info by performing offline lookups</string>
     <string name="downloading">Downloading…</string>
     <string name="download_in_progress">Download in progress, please wait</string>
-    <string name="pcap_load_in_progress">PCAP file loading in progress, please wait</string>
+    <string name="pcap_load_in_progress">Capture file loading in progress, please wait</string>
     <string name="download_failed">Download failed</string>
     <string name="geo_db_not_found">Database not found. Geolocation is disabled</string>
     <string name="database">Database</string>
@@ -450,7 +450,7 @@
     <string name="external_storage_perm_required">The external storage permission is required</string>
     <string name="many_rules_warning">You are trying to import many rules, which could make the app unresponsive during some interactions. Do you really want to continue?</string>
     <string name="pcapng_format">Pcapng format</string>
-    <string name="pcapng_format_summary">Dump packets in the pcapng dump format, which allows embedding TLS decryption secrets</string>
+    <string name="pcapng_format_summary">Dump packets in the Pcapng dump format, which is more flexible and allows embedding TLS decryption secrets</string>
     <string name="sort_by">Sort by</string>
     <string name="total_bytes">Total bytes</string>
     <string name="write_ext_storage_failed">Write to external storage failed. Check the app log for details</string>
@@ -476,18 +476,19 @@
     <string name="dont_decrypt_action">Don\'t decrypt…</string>
     <string name="status_encrypted">Encrypted</string>
     <string name="injected">Injected</string>
-    <string name="open_pcap_file">Open PCAP file…</string>
-    <string name="pcap_load_success">PCAP file loaded</string>
-    <string name="invalid_pcap_file">Invalid PCAP file</string>
+    <string name="open_pcap_file">Open PCAP/Pcapng file…</string>
+    <string name="pcap_load_success">Capture file loaded</string>
+    <string name="unsupported_pcap_file">Unsupported capture file format</string>
+    <string name="invalid_pcap_file">Invalid capture file format</string>
     <string name="capture_interface_open_error">Could not open the capture interface</string>
-    <string name="unsupported_pcap_datalink">PCAP file has an unsupported datalink</string>
-    <string name="pcap_file_not_exists">The specified PCAP file does not exist</string>
+    <string name="unsupported_pcap_datalink">The file has an unsupported datalink</string>
+    <string name="pcap_file_not_exists">The specified file does not exist</string>
     <string name="root_capture_start_failed">Capture start failure. Ensure that the device is rooted with Magisk</string>
     <string name="root_capture_pcapd_start_failure">Capture start failure. Make sure you grant root access to PCAPdroid</string>
-    <string name="pcap_read_error">PCAP read error</string>
-    <string name="pcap_file_load_aborted">PCAP file loading aborted</string>
+    <string name="pcap_read_error">Error reading the capture file. Check the log for details</string>
+    <string name="pcap_file_load_aborted">Capture file loading aborted</string>
     <string name="host_resolution_failed">"Could not resolve host %1$s</string>
-    <string name="pcapdroid_trailer_notice">To show the actual apps instead of \"%1$s\", be sure to enable the \"%2$s\" option before exporting the PCAP file</string>
+    <string name="pcapdroid_trailer_notice">To show the actual apps instead of \"%1$s\", be sure to enable the \"%2$s\" option before generating the dump</string>
     <string name="decryption_info_no_rule">This connection will not be decrypted. Create a decryption rule to decrypt it</string>
     <string name="tls_decryption_no_rules_notice">TLS decryption is only applied to connections that match the configured rules. Do you want to create decryption rules now?</string>
     <string name="active_vpn_detected">Active VPN detected</string>
