--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -530,7 +530,7 @@
     <string name="vpn_reconnection">VPN reconnection</string>
     <string name="vpn_reconnection_aborted">VPN reconnection aborted</string>
     <string name="waiting_for_vpn_disconnect">Waiting for the active VPN to disconnect…</string>
-    <string name="larger_than">Larger than</string>
+    <string name="bytes_threshold">Bytes threshold</string>
     <string name="select_the_pcap_file">Select the PCAP/Pcapng file</string>
     <string name="select_the_keylog_file">Select the SSL keylog file</string>
     <string name="error_code_with_text">%1$s (error %2$d)</string>
